ICOW-62 | Conexiones Back Front (#26)
Co-authored-by: Martin Chiquillo <martinschiquilloc@hotmail.com>

--- a/src/views/cows.html
+++ b/src/views/cows.html
@@ -54,7 +54,6 @@
                 <table id="table" class="table table-striped table-hover">
                     <thead>
                         <tr>
-                            <th>#</th>
                             <th>ID</th>
                             <th>Raza</th>
                             <th>Sexo</th>
@@ -71,7 +70,6 @@
         </div>
     </section>
 
-<<<<<<< HEAD
     <section class="seccion contenedor popup">
         <div class="modal fade" id="modalNewCow">
             <div class="modal-dialog modal-dialog-centered modal-md">
@@ -154,11 +152,8 @@
             </div>
         </div>
     </section>
-=======
-    
->>>>>>> develop
 
-    <footer class="footer">
+    <footer class="footer fixed-bottom">
         <div class="contenedor contenedor-footer">
             <p class="copyright">ISCow-In &copy; 2021</p>
             <div class="contenedor-contacto">
