--- a/src/views/fincas.html
+++ b/src/views/fincas.html
@@ -21,7 +21,7 @@
                         <a href="index.html"><img src="assets/LogoNegro (1).png" alt="logo"></a>
                         <a class="navbar-brand navMain" href="#">Reportes</a>
                         <a class="navbar-brand navMain" href="#">Cuenta</a>
-                        <a class="navbar-brand navMain" href="#">Salir</a>
+                        <a class="navbar-brand navMain" href="login.html">Salir</a>
                         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbar" aria-controls="navbarNavDarkDropdown" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                         </button>
@@ -50,7 +50,7 @@
 
     <section class="seccion contenedor">
         <div class="container ">
-            <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#modalNewFinca">
+            <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#modalAddFarm" id="btnModalAddFarm">
                 Agregar Finca
             </button>
             <div class="table-responsive">
@@ -72,11 +72,11 @@
     </section>
 
     <section class="seccion contenedor popup">
-        <div class="modal fade" id="modalNewFinca">
+        <div class="modal fade" id="modalAddFarm">
             <div class="modal-dialog modal-dialog-centered modal-md">
                 <div class="modal-content">
                     <div class="seccion contenedor">
-                        <form>
+                        <form id="formAddFarm">
                             <div class="modal-header">
                                 <h4 class="modal-title">Agregar Finca</h4>
                                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-hidden="true"></button>
@@ -85,17 +85,23 @@
                                 <div class="col-md-10 pb-2">
                                     <div class="form-outline">
                                         <label class="form-label">Nombre</label>
-                                        <input type="text" id="fincaname" class="form-control form-control-lg" />
+                                        <input type="text" id="farm_name" class="form-control form-control-lg" name="farm_name"/>
                                     </div>
                                 </div>
                                 <div class="col-md-10 pb-2">
                                     <div class="form-outline">
                                         <label class="form-label">Dirección</label>
-                                        <input type="text" id="fincaname" class="form-control form-control-lg" />
+                                        <input type="text" id="farm_location" class="form-control form-control-lg" name="farm_location"/>
                                     </div>
                                 </div>
-                                <div class="col-md-10 pb-2" id="buttonAddFinca">
-                                    <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#modalNewCow">
+                                <div class="col-md-10 pb-2">
+                                    <div class="form-outline">
+                                        <label class="form-label">Tamaño en m2</label>
+                                        <input type="text" id="farm_size" class="form-control form-control-lg" name="farm_size"/>
+                                    </div>
+                                </div>
+                                <div class="col-md-10 pb-2">
+                                    <button type="button" class="btn btn-primary" id="buttonAddFarm">
                                         Agregar
                                     </button>
                                 </div>
@@ -107,7 +113,7 @@
         </div>
     </section>
 
-    <footer class="footer">
+    <footer class="footer fixed-bottom">
         <div class="contenedor contenedor-footer">
             <p class="copyright">ISCow-In &copy; 2021</p>
             <div class="contenedor-contacto">
@@ -117,6 +123,6 @@
     </footer>
     <!-- Bootstrap core JavaScript-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
-    <script src="../../index.js"></script>
+    <script src="./utils/farms.js"></script>
 </body>
 </html>
