--- a/src/views/login.html
+++ b/src/views/login.html
@@ -13,18 +13,20 @@
             <div class="shape"></div>
             <div class="shape"></div>
         </div>
-        <form>
+        <form id="formLogin">
             <h3>Ingrese sus credenciales</h3>
     
             <label for="username">Usuario</label>
-            <input type="text" placeholder="Correo electrónico" id="username">
+            <input type="text" placeholder="Correo electrónico" id="email" name="email">
     
             <label for="password">Contraseña</label>
-            <input type="password" placeholder="****" id="password">
+            <input type="password" placeholder="****" id="password" name="password">
     
-            <button class="boton-login">Ingresar</button>
+            <button class="boton-login" id="buttonLogin">Ingresar</button>
         </form>
     </div>
+
+    <script src="./utils/login.js"></script>
     
 </body>
 
