--- a/src/views/usuarios.html
+++ b/src/views/usuarios.html
@@ -106,11 +106,11 @@
                                     <div class="form-outline">
                                         <label class="form-label">Tipo de usuario</label><br>
                                         <div class="form-check form-check-inline">
-                                            <input class="form-check-input" type="radio" name="is_admin" id="radioAdmin" value="administrador">
+                                            <input class="form-check-input" type="radio" name="is_admin" id="radioAdmin" value="true">
                                             <label class="form-check-label" for="inlineRadio1">Administrador</label>
                                         </div>
                                         <div class="form-check form-check-inline">
-                                            <input class="form-check-input" type="radio" name="is_admin_false" id="radioUser" value="usuario">
+                                            <input class="form-check-input" type="radio" name="is_admin" id="radioUser" value="false">
                                             <label class="form-check-label" for="inlineRadio2">Usuario comercial</label>
                                         </div>
                                     </div>
