personId doesnt changes when logged, fixed

--- a/src/views/usuarios.html
+++ b/src/views/usuarios.html
@@ -22,7 +22,7 @@
                         <a href="index.html"><img src="assets/LogoNegro (1).png" alt="logo"></a>
                         <a class="navbar-brand navMain" href="#">Reportes</a>
                         <a class="navbar-brand navMain" href="#">Cuenta</a>
-                        <a class="navbar-brand navMain" href="#">Salir</a>
+                        <a class="navbar-brand navMain" href="login.html">Salir</a>
                         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbar" aria-controls="navbarNavDarkDropdown" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                         </button>
