--- a/src/views/usuarios.html
+++ b/src/views/usuarios.html
@@ -22,7 +22,7 @@
                         <a href="index.html"><img src="assets/LogoNegro (1).png" alt="logo"></a>
                         <a class="navbar-brand navMain" href="#">Reportes</a>
                         <a class="navbar-brand navMain" href="#">Cuenta</a>
-                        <a class="navbar-brand navMain" href="#">Salir</a>
+                        <a class="navbar-brand navMain" href="login.html">Salir</a>
                         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbar" aria-controls="navbarNavDarkDropdown" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                         </button>
@@ -106,11 +106,11 @@
                                     <div class="form-outline">
                                         <label class="form-label">Tipo de usuario</label><br>
                                         <div class="form-check form-check-inline">
-                                            <input class="form-check-input" type="radio" name="is_admin" id="radioAdmin" value="administrador">
+                                            <input class="form-check-input" type="radio" name="is_admin" id="radioAdmin" value="true">
                                             <label class="form-check-label" for="inlineRadio1">Administrador</label>
                                         </div>
                                         <div class="form-check form-check-inline">
-                                            <input class="form-check-input" type="radio" name="is_admin_false" id="radioUser" value="usuario">
+                                            <input class="form-check-input" type="radio" name="is_admin" id="radioUser" value="false">
                                             <label class="form-check-label" for="inlineRadio2">Usuario comercial</label>
                                         </div>
                                     </div>
