--- a/src/views/lotes.html
+++ b/src/views/lotes.html
@@ -44,8 +44,8 @@
         </div>
     </header>
 
-    <main class="contenedor seccion">
-        <h1>Lotes de la finca #nombre</h1>
+    <main class="contenedor seccion" >
+        <h1 id="name_contenedor">Lotes de la finca #nombre</h1>
     </main>
 
     <section class="seccion contenedor">
@@ -60,9 +60,10 @@
                 <table id="table" class="table table-striped table-hover">
                     <thead>
                         <tr>
-                            <th>#</th>
-                            <th>ID</th>
-                            <th>Área</th>
+                            <th>#ID</th>
+                            <th>Número de lote</th>
+                            <th>Tamaño</th>
+                            <th>Estado actual</th>
                             <th># de Vacas</th>
                             <th>Acciones</th>
                         </tr>
@@ -203,6 +204,6 @@
     </footer>
     <!-- Bootstrap core JavaScript-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
-    <script src="../../index.js"></script>
+    <script src="./utils/plot.js"></script>
 </body>
 </html>
