Cows are shown in the table

--- a/src/views/cows.html
+++ b/src/views/cows.html
@@ -58,7 +58,7 @@
                             <th>Raza</th>
                             <th>Sexo</th>
                             <th>Fecha de Nacimiento</th>
-                            <th>Edad</th>
+                            <th>Edad (años)</th>
                             <th>Origen</th>
                             <th>Acciones</th>
                         </tr>
