--- a/src/views/lotes.html
+++ b/src/views/lotes.html
@@ -21,7 +21,7 @@
                         <a href="index.html"><img src="assets/LogoNegro (1).png" alt="logo"></a>
                         <a class="navbar-brand navMain" href="#">Reportes</a>
                         <a class="navbar-brand navMain" href="#">Cuenta</a>
-                        <a class="navbar-brand navMain" href="#">Salir</a>
+                        <a class="navbar-brand navMain" href="login.html">Salir</a>
                         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbar" aria-controls="navbarNavDarkDropdown" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                         </button>
@@ -77,7 +77,7 @@
             <div class="modal-dialog modal-dialog-centered modal-md">
                 <div class="modal-content">
                     <div class="seccion contenedor">
-                        <form>
+                        <form id="formNewLote">
                             <div class="modal-header">
                                 <h4 class="modal-title">Agregar Lote</h4>
                                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-hidden="true"></button>
@@ -86,17 +86,23 @@
                                 <div class="col-md-10 pb-2">
                                     <div class="form-outline">
                                         <label class="form-label">Número de lote</label>
-                                        <input type="text" id="lotenumber" class="form-control form-control-lg" />
+                                        <input type="text" id="plot_number" class="form-control form-control-lg" name="plot_number"/>
                                     </div>
                                 </div>
                                 <div class="col-md-10 pb-2">
                                     <div class="form-outline">
                                         <label class="form-label">Área</label>
-                                        <input type="text" id="lotearea" class="form-control form-control-lg" />
+                                        <input type="text" id="plot_size" class="form-control form-control-lg" name="plot_size"/>
                                     </div>
                                 </div>
-                                <div class="col-md-10 pb-2" id="buttonAddFinca">
-                                    <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#modalNewCow">
+                                <div class="col-md-10 pb-2">
+                                    <div class="form-outline">
+                                        <label class="form-label">Estado</label>
+                                        <input type="text" id="plot_status" class="form-control form-control-lg" name="plot_status" />
+                                    </div>
+                                </div>
+                                <div class="col-md-10 pb-2">
+                                    <button type="button" class="btn btn-primary" id="buttonNewPlot">
                                         Agregar
                                     </button>
                                 </div>
@@ -106,9 +112,7 @@
                 </div>
             </div>
         </div>
-    </section>
-
-    
+    </section>    
 
     <footer class="footer fixed-bottom">
         <div class="contenedor contenedor-footer">
