--- a/src/views/cows.html
+++ b/src/views/cows.html
@@ -258,7 +258,7 @@
                                 </div>
                                 <div class="col-md-10 pb-2">
                                     <button type="button" class="btn btn-primary" id="buttonAddWeight">
-                                    Editar
+                                    Añadir
                                     </button>
                                 </div>
                             </div>
