--- a/src/views/cows.html
+++ b/src/views/cows.html
@@ -21,7 +21,7 @@
                         <a href="index.html"><img src="assets/LogoNegro (1).png" alt="logo"></a>
                         <a class="navbar-brand navMain" href="#">Reportes</a>
                         <a class="navbar-brand navMain" href="#">Cuenta</a>
-                        <a class="navbar-brand navMain" href="#">Salir</a>
+                        <a class="navbar-brand navMain" href="login.html">Salir</a>
                         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbar" aria-controls="navbarNavDarkDropdown" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                         </button>
@@ -50,6 +50,9 @@
 
     <section class="seccion contenedor">
         <div class="container">
+            <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#modalNewCow" id="btnModalNewCow">
+                Agregar vaca
+            </button>
             <div class="table-responsive">
                 <table id="table" class="table table-striped table-hover">
                     <thead>
@@ -75,7 +78,7 @@
             <div class="modal-dialog modal-dialog-centered modal-md">
                 <div class="modal-content">
                     <div class="seccion contenedor">
-                        <form >
+                        <form id="formNewCow">
                             <div class="modal-header">
                                 <h4 class="modal-title">Agregar vaca</h4>
                                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-hidden="true"></button>
@@ -84,7 +87,7 @@
                                 <div class="col-md-10 pb-2">
                                     <div class="form-outline">
                                         <label class="form-label">Raza</label>
-                                        <select class="form-select form-select-lg mb-3" aria-label=".form-select-lg race">
+                                        <select class="form-select form-select-lg mb-3" aria-label=".form-select-lg race" name="race">
                                             <option >Angus</option>
                                             <option >Hereford</option>
                                             <option >Nerole</option>
@@ -100,11 +103,11 @@
                                     <div class="form-outline">
                                         <label class="form-label">Sexo</label><br>
                                         <div class="form-check form-check-inline">
-                                            <input class="form-check-input" type="radio" name="inlineRadioOptions" id="radioMacho" value="macho">
+                                            <input class="form-check-input" type="radio" name="gender" id="radioMacho" value="macho">
                                             <label class="form-check-label" for="inlineRadio1">Macho</label>
                                         </div>
                                         <div class="form-check form-check-inline">
-                                            <input class="form-check-input" type="radio" name="inlineRadioOptions" id="radioHembra" value="hembra">
+                                            <input class="form-check-input" type="radio" name="gender" id="radioHembra" value="hembra">
                                             <label class="form-check-label" for="inlineRadio2">Hembra</label>
                                         </div>
                                     </div>
@@ -112,18 +115,18 @@
                                 <div class="col-md-11 mb-4 pb-2">
                                     <div class="form-outline">
                                         <label class="form-label">Fecha de Nacimiento</label>
-                                        <input type="date" id="form1" class="form-control form-control-lg" />
+                                        <input type="date" id="form1" class="form-control form-control-lg" name="born_date"/>
                                     </div>
                                 </div>
                                 <div class="col-md-11 mb-4 pb-2">
                                     <div class="form-outline">
                                         <label class="form-label">Origen</label><br>
                                         <div class="form-check form-check-inline">
-                                            <input class="form-check-input" type="radio" name="radioorigen" id="radioNatural" value="natural">
+                                            <input class="form-check-input" type="radio" name="origin" id="radioNatural" value="natural">
                                             <label class="form-check-label" for="inlineRadio1">Natural</label>
                                         </div>
                                         <div class="form-check form-check-inline">
-                                            <input class="form-check-input" type="radio" name="radioorigen" id="radioCompra" value="compra">
+                                            <input class="form-check-input" type="radio" name="origin" id="radioCompra" value="compra">
                                             <label class="form-check-label" for="inlineRadio2">Compra</label>
                                         </div>
                                     </div>
@@ -140,9 +143,122 @@
                                         </select>
                                     </div>
                                 </div>
-                                <div class="col-md-10 pb-2" id="buttonAddCow">
-                                    <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#modalNewCow">
+                                <div class="col-md-10 pb-2">
+                                    <button type="button" class="btn btn-primary" id="buttonNewCow">
                                         Agregar
+                                    </button>
+                                </div>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="seccion contenedor popup">
+        <div class="modal fade" id="modalEditCow">
+            <div class="modal-dialog modal-dialog-centered modal-md">
+                <div class="modal-content">
+                    <div class="seccion contenedor">
+                        <form id="formEditCow">
+                            <div class="modal-header">
+                                <h4 class="modal-title">Editar vaca</h4>
+                                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-hidden="true"></button>
+                            </div>
+                            <div class="row">
+                                <div class="col-md-10 pb-2">
+                                    <div class="form-outline">
+                                        <label class="form-label">Raza</label>
+                                        <select class="form-select form-select-lg mb-3" aria-label=".form-select-lg race" name="race">
+                                            <option >Angus</option>
+                                            <option >Hereford</option>
+                                            <option >Nerole</option>
+                                            <option >Brahman</option>
+                                            <option >Pardo</option>
+                                            <option >Brangus</option>
+                                            <option >Cebú</option>
+                                            <option >Criolla</option>
+                                        </select>
+                                    </div>
+                                </div>
+                                <div class="col-md-11 mb-4 pb-2">
+                                    <div class="form-outline">
+                                        <label class="form-label">Sexo</label><br>
+                                        <div class="form-check form-check-inline">
+                                            <input class="form-check-input" type="radio" name="gender" id="radioMacho" value="macho">
+                                            <label class="form-check-label" for="inlineRadio1">Macho</label>
+                                        </div>
+                                        <div class="form-check form-check-inline">
+                                            <input class="form-check-input" type="radio" name="gender" id="radioHembra" value="hembra">
+                                            <label class="form-check-label" for="inlineRadio2">Hembra</label>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-md-11 mb-4 pb-2">
+                                    <div class="form-outline">
+                                        <label class="form-label">Fecha de Nacimiento</label>
+                                        <input type="date" id="form1" class="form-control form-control-lg" name="born_date" />
+                                    </div>
+                                </div>
+                                <div class="col-md-11 mb-4 pb-2">
+                                    <div class="form-outline">
+                                        <label class="form-label">Origen</label><br>
+                                        <div class="form-check form-check-inline">
+                                            <input class="form-check-input" type="radio" name="origin" id="radioNatural" value="natural">
+                                            <label class="form-check-label" for="inlineRadio1">Natural</label>
+                                        </div>
+                                        <div class="form-check form-check-inline">
+                                            <input class="form-check-input" type="radio" name="origin" id="radioCompra" value="compra">
+                                            <label class="form-check-label" for="inlineRadio2">Compra</label>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-md-10 pb-2" id="hidePadres">
+                                    <div class="form-outline">
+                                        <label class="form-label">Seleccione padre</label>
+                                        <select class="form-select form-select-lg mb-3" aria-label=".form-select-lg race">
+                                            <option >Angus</option>
+                                        </select><br>
+                                        <label class="form-label">Seleccione madre</label>
+                                        <select class="form-select form-select-lg mb-3" aria-label=".form-select-lg race">
+                                            <option >Angus</option>
+                                        </select>
+                                    </div>
+                                </div>
+                                <div class="col-md-10 pb-2">
+                                    <button type="button" class="btn btn-primary" id="buttonEditCow">
+                                        Editar
+                                    </button>
+                                </div>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="seccion contenedor popup">
+        <div class="modal fade" id="modalAddWeight">
+            <div class="modal-dialog modal-dialog-centered modal-md">
+                <div class="modal-content">
+                    <div class="seccion contenedor">
+                        <form id="formAddWeight">
+                            <div class="modal-header">
+                                <h4 class="modal-title">Control de peso</h4>
+                                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-hidden="true"></button>
+                            </div>
+                            <div class="row">
+                                <div class="col-md-10 pb-2">
+                                    <div class="form-outline">
+                                        <label class="form-label">Ingrese el peso</label>
+                                        <input type="text" id="weight" class="form-control form-control-lg" name="weight" />
+                                    </div>
+                                </div>
+                                <div class="col-md-10 pb-2">
+                                    <button type="button" class="btn btn-primary" id="buttonAddWeight">
+                                    Añadir
                                     </button>
                                 </div>
                             </div>
